--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -693,6 +693,10 @@ video {
   top: 0.75rem;
 }
 
+.top-full {
+  top: 100%;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -773,6 +777,11 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .-ms-32 {
@@ -1006,6 +1015,26 @@ video {
   height: 100vh;
 }
 
+.h-\[3rem\] {
+  height: 3rem;
+}
+
+.h-\[4rem\] {
+  height: 4rem;
+}
+
+.h-\[6rem\] {
+  height: 6rem;
+}
+
+.h-\[2rem\] {
+  height: 2rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .max-h-40 {
   max-height: 10rem;
 }
@@ -1130,6 +1159,10 @@ video {
   width: 10%;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .w-\[15\%\] {
   width: 15%;
 }
@@ -1152,6 +1185,10 @@ video {
 
 .w-\[40\%\] {
   width: 40%;
+}
+
+.w-\[49\%\] {
+  width: 49%;
 }
 
 .w-\[5\%\] {
@@ -1207,8 +1244,20 @@ video {
   width: 100vw;
 }
 
-.w-\[49\%\] {
-  width: 49%;
+.w-20 {
+  width: 5rem;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .min-w-0 {
@@ -1217,6 +1266,10 @@ video {
 
 .min-w-\[260px\] {
   min-width: 260px;
+}
+
+.min-w-\[4rem\] {
+  min-width: 4rem;
 }
 
 .max-w-72 {
@@ -1251,6 +1304,10 @@ video {
   max-width: 20rem;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1269,6 +1326,10 @@ video {
 
 .table-auto {
   table-layout: auto;
+}
+
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .border-separate {
@@ -1449,6 +1510,14 @@ video {
   gap: 2rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1479,10 +1548,20 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.place-self-start {
+  place-self: start;
 }
 
 .\!place-self-center {
@@ -1583,6 +1662,10 @@ video {
   border-width: 0px;
 }
 
+.\!border {
+  border-width: 1px !important;
+}
+
 .border-b-0 {
   border-bottom-width: 0px;
 }
@@ -1615,19 +1698,16 @@ video {
   border-top-width: 8px;
 }
 
-.\!border-green-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity, 1)) !important;
+.border-b {
+  border-bottom-width: 1px;
 }
 
-.\!border-red-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1)) !important;
+.border-t {
+  border-top-width: 1px;
 }
 
-.\!border-yellow-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(234 179 8 / var(--tw-border-opacity, 1)) !important;
+.border-none {
+  border-style: none;
 }
 
 .border-gray-300 {
@@ -1702,6 +1782,25 @@ video {
   border-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
 }
 
+.border-vla2 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
+}
+
+.border-vda2 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
+}
+
+.\!border-vda2 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1)) !important;
+}
+
+.border-vls\/20 {
+  border-color: rgb(139 145 151 / 0.2);
+}
+
 .border-e-transparent {
   border-inline-end-color: transparent;
 }
@@ -1720,21 +1819,9 @@ video {
   border-top-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
 }
 
-.\!bg-green-500\/10 {
-  background-color: rgb(34 197 94 / 0.1) !important;
-}
-
-.\!bg-red-500\/10 {
-  background-color: rgb(239 68 68 / 0.1) !important;
-}
-
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
-}
-
-.\!bg-yellow-500\/10 {
-  background-color: rgb(234 179 8 / 0.1) !important;
 }
 
 .bg-black {
@@ -1775,10 +1862,6 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-500\/10 {
-  background-color: rgb(34 197 94 / 0.1);
 }
 
 .bg-orange-500 {
@@ -1829,6 +1912,24 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.\!bg-transparent {
+  background-color: transparent !important;
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -2049,6 +2150,10 @@ video {
   padding-top: 0.5rem;
 }
 
+.\!pr-12 {
+  padding-right: 3rem !important;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2167,16 +2272,6 @@ video {
   letter-spacing: 0.025em;
 }
 
-.\!text-green-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(34 197 94 / var(--tw-text-opacity, 1)) !important;
-}
-
-.\!text-red-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
-}
-
 .\!text-vla {
   --tw-text-opacity: 1 !important;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1)) !important;
@@ -2185,11 +2280,6 @@ video {
 .\!text-vls2 {
   --tw-text-opacity: 1 !important;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1)) !important;
-}
-
-.\!text-yellow-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(234 179 8 / var(--tw-text-opacity, 1)) !important;
 }
 
 .text-gray-600 {
@@ -2296,6 +2386,16 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-vlp2 {
+  --tw-text-opacity: 1;
+  color: rgb(232 233 235 / var(--tw-text-opacity, 1));
 }
 
 .text-opacity-90 {
@@ -2458,6 +2558,10 @@ video {
   transition-duration: 150ms;
 }
 
+.\!transition-none {
+  transition-property: none !important;
+}
+
 .duration-200 {
   transition-duration: 200ms;
 }
@@ -2468,6 +2572,10 @@ video {
 
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-150 {
+  transition-duration: 150ms;
 }
 
 .ease-in {
@@ -2584,7 +2692,7 @@ html {
 /* Table Alternative Scrollbar Light */
 
 .alt-table-scrollbar::-webkit-scrollbar {
-  width: 12px;
+  width: 9px;
   /* Adjust the width of the scrollbar */
 }
 
@@ -2596,18 +2704,30 @@ html {
 }
 
 .alt-table-scrollbar::-webkit-scrollbar-thumb {
-  background: #2b3440;
-  /* The draggable scrolling handle */
+  background: #2b344028;
   border-radius: 4px;
-  /* Roundness of the scrollbar handle */
 }
 
 .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #242c36;
+  background: #2b344059;
   /* Hover effect */
 }
 
-/* MARK: Scrollbars Dark */
+/* Alternative Table Dark */
+
+.dark .alt-table-scrollbar::-webkit-scrollbar-track {
+  background: #27272ab6;
+}
+
+.dark .alt-table-scrollbar::-webkit-scrollbar-thumb {
+  background: #18181b83;
+  /* Darker handle for dark mode */
+}
+
+.dark .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #18181b;
+  /* Hover effect for dark mode */
+}
 
 /* Global */
 
@@ -2643,22 +2763,6 @@ html {
 
 .dark .table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #1b1b1f;
-  /* Hover effect for dark mode */
-}
-
-/* Alternative Table Dark */
-
-.dark .alt-table-scrollbar::-webkit-scrollbar-track {
-  background: #525252;
-}
-
-.dark .alt-table-scrollbar::-webkit-scrollbar-thumb {
-  background: #18181b;
-  /* Darker handle for dark mode */
-}
-
-.dark .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #3f3f46;
   /* Hover effect for dark mode */
 }
 
@@ -3049,7 +3153,7 @@ input[type='number'] {
 .table-interaction-icon-red:hover {
   background-color: rgb(232 233 235 / 0.6);
   --tw-text-opacity: 1;
-  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .table-interaction-icon-red:is(.dark *) {
@@ -3060,7 +3164,7 @@ input[type='number'] {
 .table-interaction-icon-red:hover:is(.dark *) {
   background-color: rgb(232 233 235 / 0.2);
   --tw-text-opacity: 1;
-  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .table-interaction-icon-red:active {
@@ -3170,9 +3274,9 @@ input[type='number'] {
 
 .dark .butt-style:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
 
 .dark .butt-style:active {
@@ -3269,7 +3373,7 @@ input[type='number'] {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
 
 .dark .tab-button-active {
@@ -3278,7 +3382,7 @@ input[type='number'] {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -3288,7 +3392,7 @@ input[type='number'] {
 
 .dark .tab-button-active:hover {
   --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
 
 /* MARK: Tab Toggler Tabs */
@@ -3378,7 +3482,7 @@ input[type='number'] {
 
 .toggler-inactive:hover:is(.dark *) {
   --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
 
 .toggler-active {
@@ -3389,7 +3493,7 @@ input[type='number'] {
 
 .toggler-active:is(.dark *) {
   --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
 
 /* Togglers Ends */
@@ -3476,7 +3580,7 @@ input[type='number'] {
 
 .dark .srch-style:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
 }
@@ -3493,7 +3597,7 @@ input[type='number'] {
 
 .dark .srch-style:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
 }
@@ -3951,7 +4055,7 @@ input[type='number'] {
 .underlined-text:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
-  text-decoration-color: #FEA09A;
+  text-decoration-color: #FE7F76;
 }
 
 /* MARK: Inputs */
@@ -4366,6 +4470,26 @@ input[type='radio']:hover {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-vls-2-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(158 172 191 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-vls-2-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(207 214 223 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-blue-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-blue-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:fill-vls:hover {
   fill: #8B9197;
 }
@@ -4430,6 +4554,16 @@ input[type='radio']:hover {
   color: rgb(36 44 54 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-vda2:hover {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-red-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -4442,10 +4576,6 @@ input[type='radio']:hover {
 .hover\:placeholder-vla:hover::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(83 207 110 / var(--tw-placeholder-opacity, 1));
-}
-
-.hover\:opacity-75:hover {
-  opacity: 0.75;
 }
 
 .hover\:shadow:hover {
@@ -4462,6 +4592,11 @@ input[type='radio']:hover {
 
 .hover\:ring-vls\/80:hover {
   --tw-ring-color: rgb(139 145 151 / 0.8);
+}
+
+.hover\:brightness-125:hover {
+  --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .hover\:placeholder\:text-vla:hover::-moz-placeholder {
@@ -4482,6 +4617,10 @@ input[type='radio']:hover {
 .focus\:border-vred-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+}
+
+.focus\:border-vls\/40:focus {
+  border-color: rgb(139 145 151 / 0.4);
 }
 
 .focus\:bg-slate-400:focus {
@@ -4524,6 +4663,12 @@ input[type='radio']:hover {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.focus\:ring-1:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .focus\:ring-red-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity, 1));
@@ -4539,9 +4684,13 @@ input[type='radio']:hover {
   --tw-ring-color: rgb(83 207 110 / var(--tw-ring-opacity, 1));
 }
 
-.active\:scale-90:active {
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
+.focus\:ring-vls\/60:focus {
+  --tw-ring-color: rgb(139 145 151 / 0.6);
+}
+
+.active\:scale-95:active {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -4557,6 +4706,10 @@ input[type='radio']:hover {
 
 .disabled\:cursor-not-allowed:disabled {
   cursor: not-allowed;
+}
+
+.group:hover .group-hover\:block {
+  display: block;
 }
 
 .dark\:\!border:is(.dark *) {
@@ -4679,6 +4832,11 @@ input[type='radio']:hover {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-vlp2:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:\!text-vds3light:is(.dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(163 163 163 / var(--tw-text-opacity, 1)) !important;
@@ -4733,7 +4891,7 @@ input[type='radio']:hover {
 }
 
 .dark\:decoration-vda:is(.dark *) {
-  text-decoration-color: #FEA09A;
+  text-decoration-color: #FE7F76;
 }
 
 .dark\:placeholder-neutral-300:is(.dark *)::-moz-placeholder {
@@ -4772,7 +4930,7 @@ input[type='radio']:hover {
 
 .dark\:ring-vda:is(.dark *) {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(254 160 154 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(254 127 118 / var(--tw-ring-opacity, 1));
 }
 
 .dark\:placeholder\:text-neutral-300:is(.dark *)::-moz-placeholder {
@@ -4808,6 +4966,10 @@ input[type='radio']:hover {
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:dark\:bg-vdp2\/75:is(.dark *):hover {
+  background-color: rgb(39 39 42 / 0.75);
 }
 
 .dark\:hover\:fill-vred-300:hover:is(.dark *) {
@@ -4862,6 +5024,16 @@ input[type='radio']:hover {
 .dark\:hover\:placeholder-vred-300:hover:is(.dark *)::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(254 160 154 / var(--tw-placeholder-opacity, 1));
+}
+
+.dark\:hover\:brightness-150:hover:is(.dark *) {
+  --tw-brightness: brightness(1.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:dark\:brightness-125:is(.dark *):hover {
+  --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .dark\:hover\:placeholder\:text-vla:hover:is(.dark *)::-moz-placeholder {
