--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -554,14 +554,6 @@ video {
   display: none;
 }
 
-*:focus {
-  outline: 2px solid #4299e199;
-}
-
-.dark *:focus {
-  outline: 2px solid #53cf6e;
-}
-
 .container {
   width: 100%;
 }
@@ -749,6 +741,10 @@ video {
   margin: 0.5rem;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -909,6 +905,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.\!flex {
+  display: flex !important;
 }
 
 .inline-flex {
@@ -1193,6 +1193,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
+}
+
+.w-\[97\%\] {
+  width: 97%;
+}
+
+.w-\[96\%\] {
+  width: 96%;
 }
 
 .min-w-0 {
@@ -1664,10 +1680,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.border-vls\/20 {
-  border-color: rgb(139 145 151 / 0.2);
-}
-
 .border-vls\/30 {
   border-color: rgb(139 145 151 / 0.3);
 }
@@ -1735,6 +1747,11 @@ video {
   background-color: rgb(96 165 250 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
@@ -1800,11 +1817,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-vlp2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
 .bg-vls2 {
   --tw-bg-opacity: 1;
   background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
@@ -1818,6 +1830,66 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vdp {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vdt-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 26 30 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-1-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 204 204 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-2-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 251 251 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-2-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 247 247 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-2-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 244 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-1-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-1-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vlp-1-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.\!bg-blue-50 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-opacity-50 {
@@ -1983,6 +2055,11 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .\!pl-12 {
@@ -2405,6 +2482,20 @@ video {
 
 .ring-vls\/90 {
   --tw-ring-color: rgb(139 145 151 / 0.9);
+}
+
+.ring-vda {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(75 168 95 / var(--tw-ring-opacity, 1));
+}
+
+.ring-white {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
+}
+
+.ring-vls\/80 {
+  --tw-ring-color: rgb(139 145 151 / 0.8);
 }
 
 .blur {
@@ -4374,6 +4465,10 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.hover\:border-vls\/80:hover {
+  border-color: rgb(139 145 151 / 0.8);
+}
+
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
@@ -4422,6 +4517,16 @@ input[type='radio']:hover {
 .hover\:bg-vlp:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-blue-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-blue-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
@@ -4520,6 +4625,10 @@ input[type='radio']:hover {
 
 .hover\:ring-vls\/90:hover {
   --tw-ring-color: rgb(139 145 151 / 0.9);
+}
+
+.hover\:ring-vls\/80:hover {
+  --tw-ring-color: rgb(139 145 151 / 0.8);
 }
 
 .hover\:placeholder\:text-vla:hover::-moz-placeholder {
@@ -4645,18 +4754,9 @@ input[type='radio']:hover {
   border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
 }
 
-.dark\:border-vda2:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
-}
-
 .dark\:border-vdp3:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(63 63 70 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-vds\/40:is(.dark *) {
-  border-color: rgb(212 212 212 / 0.4);
 }
 
 .dark\:border-vds2:is(.dark *) {
@@ -4725,10 +4825,6 @@ input[type='radio']:hover {
   background-color: rgb(24 24 27 / 0.7);
 }
 
-.dark\:bg-vdp\/80:is(.dark *) {
-  background-color: rgb(24 24 27 / 0.8);
-}
-
 .dark\:bg-vdp2:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
@@ -4744,9 +4840,34 @@ input[type='radio']:hover {
   background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-vdt-800:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 29 32 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vdt-900:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 26 30 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vdt-700:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 31 35 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vlp-2-800:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 247 247 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:\!bg-vdp:is(.dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .dark\:\!text-vds3light:is(.dark *) {
@@ -4845,6 +4966,16 @@ input[type='radio']:hover {
   --tw-ring-color: rgb(83 207 110 / var(--tw-ring-opacity, 1));
 }
 
+.dark\:ring-vda:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(75 168 95 / var(--tw-ring-opacity, 1));
+}
+
+.dark\:ring-white:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
+}
+
 .dark\:placeholder\:text-neutral-300:is(.dark *)::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
@@ -4865,10 +4996,6 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:hover\:border-vds\/80:hover:is(.dark *) {
-  border-color: rgb(212 212 212 / 0.8);
-}
-
 .dark\:hover\:bg-neutral-500:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(115 115 115 / var(--tw-bg-opacity, 1));
@@ -4877,11 +5004,6 @@ input[type='radio']:hover {
 .dark\:hover\:bg-neutral-600:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-vdp:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
