--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1007,6 +1007,10 @@ video {
   max-height: 100%;
 }
 
+.max-h-\[20vh\] {
+  max-height: 20vh;
+}
+
 .max-h-\[300px\] {
   max-height: 300px;
 }
@@ -1017,14 +1021,6 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
-}
-
-.max-h-\[30vh\] {
-  max-height: 30vh;
-}
-
-.max-h-\[20vh\] {
-  max-height: 20vh;
 }
 
 .min-h-0 {
@@ -1550,6 +1546,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.\!rounded {
+  border-radius: 0.25rem !important;
+}
+
 .rounded-b-md {
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1568,6 +1568,16 @@ video {
 .rounded-t-none {
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
+}
+
+.\!rounded-t {
+  border-top-left-radius: 0.25rem !important;
+  border-top-right-radius: 0.25rem !important;
+}
+
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
 
 .border {
@@ -1616,6 +1626,10 @@ video {
 
 .border-t-8 {
   border-top-width: 8px;
+}
+
+.border-none {
+  border-style: none;
 }
 
 .border-gray-300 {
@@ -1816,16 +1830,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vds3neu700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -4805,11 +4809,6 @@ input[type='radio']:hover {
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vds:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:\!text-vds3light:is(.dark *) {
